--- a/homepage/home.css
+++ b/homepage/home.css
@@ -44,6 +44,10 @@
     margin-right: 1cm;
 }
 
+#service ul {
+    margin-top: 0;
+}
+
 @media only screen and (max-width: 724px) {
     #title-card {
         flex-wrap: wrap;
