--- a/main.css
+++ b/main.css
@@ -126,3 +126,14 @@ footer {
 footer img {
     margin-bottom: 0.6em;
 }
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background: black;
+        color: white;
+    }
+
+    th {
+        color: black;
+    }
+}
