--- a/selected-work/selected-work.css
+++ b/selected-work/selected-work.css
@@ -2,12 +2,15 @@
     --img-w: 286px;
 }
 
-#selected-work-container {
+#selected-work-container, #selected-work-container-mobile {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-around;
     row-gap: 2em;
+}
+#selected-work-container-mobile {
+    display: none;
 }
 
 .project {
@@ -53,4 +56,13 @@
 
 .project:hover .proj-overlay {
     bottom: 0;
+}
+
+@media only screen and (max-width: 766px) {
+    #selected-work-container {
+        display: none;
+    }
+    #selected-work-container-mobile {
+        display: flex;
+    }
 }
