--- a/main.css
+++ b/main.css
@@ -86,6 +86,10 @@ header ul li a.active-link:hover {
     color: #ccc;
 }
 
+header ul li#business-card {
+    display: none;
+}
+
 .img-right {
     position: relative;
     float: right;
@@ -194,6 +198,13 @@ footer img {
     header li a:hover,
     header .menu-btn:hover {
         background-color: #f4f4f4;
+    }
+
+    header ul li#business-card {
+        display: initial;
+    }
+    header ul li#business-card a {
+        color: rgba(0,0,0,1);
     }
     
     header #name {
