Font overhaul and kidney blog post

--- a/about/about.css
+++ b/about/about.css
@@ -3,7 +3,7 @@
     margin-bottom: 0;
 }
 #quote-symbol {
-    font-size: 110px;
+    font-size: 6em;
     font-family: 'IM Fell English SC', serif;
     color: #999999;
     margin-right: 0.1em;
