--- a/business-card/business-card.css
+++ b/business-card/business-card.css
@@ -58,14 +58,14 @@ header #name {
     width: 100%;
     text-align: center;
     font-family: 'Roboto Slab', serif;
-    font-size: 35px;
+    font-size: 1.7em;
     line-height: 1.1em;
     margin-top: 0.1em;
     margin-bottom: 0.4em;
 }
 header #job {
     text-align: center;
-    font-size: 25px;
+    font-size: 1.2em;
 }
 
 main {
@@ -80,7 +80,7 @@ main {
     display: flex;
     align-items: center;
     background: var(--translucent-black);
-    font-size: 16px;
+    font-size: 0.7em;
     text-decoration: none;
     color: white;
     margin: 0.25cm 0;
@@ -96,7 +96,7 @@ main {
 }
 
 textarea {
-    font-size: 17px;
+    font-size: 0.8em;
     background: var(--translucent-black);
     color: white;
     resize: none;
