--- a/blog-posts/blog-post.css
+++ b/blog-posts/blog-post.css
@@ -49,7 +49,13 @@ section.toc div ul li {
 }
 section.toc div ul li:before {
     content: ">";
-    padding-right: 0.5em;
+    padding-right: 0.4em;
+}
+
+sup {
+    font-size: 80%;
+    white-space: nowrap;
+    line-height: 1;
 }
 
 @media only screen and (max-width: 809px) {
