--- a/main.css
+++ b/main.css
@@ -25,8 +25,7 @@ body {
 .separator {
     height: 1px;
     background-color: var(--seperator-color);
-    margin-top: 2em;
-    margin-bottom: 2em;
+    margin: 2em 0;
 }
 .section, section {
     margin: 2.7em 0;
