--- a/main.css
+++ b/main.css
@@ -80,6 +80,7 @@ header ul {
     list-style: none;
     text-align: center;
     font-size: 0.7em;
+    padding-left: 0;
 }
 header ul li {
     display: inline-block;
