--- a/project-pages/project-page.css
+++ b/project-pages/project-page.css
@@ -45,7 +45,7 @@
 }
 .bullet {
     border-radius: 50%;
-    background-color: black;
+    background-color: var(--text-color);
     width: var(--bullet-diameter);
     height: var(--bullet-diameter);
     margin: 0.5em;
@@ -68,7 +68,7 @@ img {
 
 blockquote {
     border-left-width: 4px;
-    border-left-color: gainsboro;
+    border-left-color: var(--seperator-color);
     border-left-style: solid;
     padding-left: 1em;
     margin-left: 1em;
@@ -77,7 +77,7 @@ blockquote {
 table {
     width: 100%;
     border-collapse: collapse;
-    border: 2px solid rgb(200, 200, 200);
+    border: 2px solid var(--active-gray);
 }
 caption {
     caption-side: bottom;
@@ -86,10 +86,10 @@ caption {
     line-height: 1.2em;
 }
 th {
-    background-color: gainsboro;
+    background-color: var(--active-gray);
 }
 td, th {
-    border: 1px solid rgb(190, 190, 190);
+    border: 1px solid var(--active-gray);
     padding: 7px 5px;
     text-align: center;
 }
@@ -163,11 +163,5 @@ td, th {
             color: var(--text-color);
             -webkit-text-stroke-width: 0;
         }
-    }
-}
-
-@media (prefers-color-scheme: dark) {
-    .skills .bullet {
-        background-color: var(--text-color);
     }
 }
