--- a/main.css
+++ b/main.css
@@ -55,6 +55,7 @@ h3 {
 a {
     color: rgb(var(--link-color));
     text-underline-offset: 0.2em;
+    text-decoration-thickness: 1px;
 }
 a:hover {
     text-decoration: none;
